tests/build/cases/widget/malformed_property_attribute.stderr
error: expected square brackets
  --> cases/widget/malformed_property_attribute.rs:10:10
   |
10 |         #![allow(inner_attribute)]
   |          ^

error: expected identifier
  --> cases/widget/malformed_property_attribute.rs:11:11
   |
11 |         #[!foo]
   |           ^
